form authorization with postgresql

--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -5,11 +5,11 @@
   <title>login</title>
 </head>
 <body>
-<div class="container">
+<div>
   <h1>Courses</h1>
-  <div class="container">
-    <form class="form-signin" method="get" action="/logout">
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Logout</button>
+  <div>
+    <form method="get" action="/logout">
+      <button type="submit">Logout</button>
     </form>
   </div>
 </div>
