--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,22 +5,22 @@
     <title>login</title>
 </head>
 <body>
-    <div class="container">
-        <form class="form-signin" method="post" action="/login">
-            <h2 class="form-signin-heading">Please sign in</h2>
+    <div>
+        <form method="post" action="/login">
+            <h2>Please sign in</h2>
             <p>
-                <label for="username" class="sr-only">Username</label>
-                <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="" autofocus="">
+                <label for="email">Email</label>
+                <input type="text" id="email" name="email" placeholder="Email" required="" autofocus="">
             </p>
             <p>
-                <label for="password" class="sr-only">Password</label>
-                <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="Password" required="">
             </p>
             <p>
-                Remember me?
-                <input type="checkbox" id="remember-me" name="remember-me" class="form-control">
+                <label for="remember-me">Remember me?</label>
+                <input type="checkbox" id="remember-me" name="remember-me">
             </p>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+            <button type="submit">Login</button>
         </form>
     </div>
 </body>
